--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -16,7 +16,7 @@ $color-chico: #8c6157;
 $color-jungle: #2fad96;
 $color-sandal: #9f8c67;
 // Material Design
-$color-jungle-green: #25ac94;
+$color-jungle-green: #0088cc;
 $color-dorado: #5d5450;
 $color-thunderbird: #c92217;
 $color-sand: #81695e;
