Set map function in feedback section

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Color Cube
 $color-white: #fefefe;
-$color-tuna: #343142;
+$color-tuna: #6d639e;
 $color-silver: #bcbcbc;
 $color-mountain: #1eae96;
 $color-boulder: #797979;
