--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -1,2 +1,13 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: $color-jungle-green;
+    border-radius: 10px;
+}
